# DoIBleed

./: .gitignore  Cargo.toml  readme.md  solve.py
src/: bin.rs  error.rs  game.rs
